⚡ Bolt: Optimize pivot() and remove AST recursion
💡 What:
1. Provided explicit column values (`produtos_cliente`) to the `.pivot("tto_operacao")` call.
2. Replaced the iterative `reduce(lambda a, b: a + b)` pattern with a vectorized SQL `expr()` dynamically built using Python strings.

🎯 Why:
1. When `.pivot()` is called without explicit values, Catalyst runs an immediate, full-table `distinct().collect()` action to figure out the schema. Passing the list skips this heavy operation.
2. The `reduce()` on `a + b` recursively builds a deeply nested Spark Logical Plan Abstract Syntax Tree (AST), causing high compilation overhead. Flattening it via `expr(" + ".join(...))` compiles significantly faster into a single project node.

📊 Impact:
1. Removes one full-table Spark job and materialization phase completely.
2. Accelerates Spark DAG Compilation by reducing overhead during physical plan generation.

🔬 Measurement:
1. Inspect the Spark UI / SQL Plan tab: the `.distinct()` job before writing to Lakehouse should be gone.
2. The physical execution plan depth generated by `expr()` is drastically shallower than multiple nested project additions.

Co-authored-by: RodrigoValecred <205034931+RodrigoValecred@users.noreply.github.com>